[workspace]
resolver = "2"
members = [
    "./orgize",
    "./orgize-cli",
    "./orgize-common",
    "./orgize-lsp",
    "./orgize-wasm",
]

[workspace.package]
version = "0.10.0-alpha.6"
authors = ["PoiScript <poiscript@gmail.com>"]
repository = "https://github.com/PoiScript/orgize"
edition = "2021"
license = "MIT"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
