[workspace]
resolver = "2"
members = [".", "./wasm"]

[package]
name = "orgize"
version = "0.10.0-alpha.7"
authors = ["PoiScript <poiscript@gmail.com>"]
repository = "https://github.com/PoiScript/orgize"
edition = "2021"
license = "MIT"
description = "A Rust library for parsing org-mode files."
readme = "README.md"
keywords = ["orgmode", "org-mode", "emacs", "parser"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
indexmap = ["dep:indexmap"]
chrono = ["dep:chrono"]

[dependencies]
bytecount = "0.6"
chrono = { version = "0.4", optional = true }
indexmap = { version = "2.1", optional = true }
jetscii = "0.5"
memchr = "2.5"
nom = { version = "7.1", default-features = false, features = ["std"] }
rowan = "0.15"
tracing = "0.1"

[dev-dependencies]
criterion = "0.5"
insta = "1.29"
slugify = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[[bench]]
name = "parse"
harness = false

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
