[package]
name = "orgize-cli"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
description = "Command line utilities for org-mode files, builtin with orgize."

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
clap-verbosity-flag = "2.1.0"
jetscii = "0.5.3"
nom = "7.1.3"
orgize = { path = "../orgize" }
orgize-common = { path = "../orgize-common" }
resolve-path = "0.1.0"
tempfile = "3.8.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[[bin]]
name = "orgize"
path = "src/main.rs"
