[package]
name = "orgize-common"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared code for orgize-cli and orgize-lsp"

[dependencies]
anyhow = "1.0.75"
jetscii = "0.5.3"
nom = "7.1.3"
orgize = { path = "../orgize" }
resolve-path = "0.1.0"
tracing = "0.1.40"
