[package]
name = "orgize-demos"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
actix-web = { version = "1.0.8", default-features = false }
orgize = { path = "../orgize", features = ["syntect"]  }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
