[package]
name = "orgize-lsp"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
description = "Language server for Org-mode, powered by orgize."

[dependencies]
orgize = { path = "../orgize" }
orgize-common = { path = "../orgize-common" }
tokio = { version = "1.17", features = ["full"] }
tower-lsp = { version = "0.20", features = ["proposed"] }
dashmap = "5.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tempfile = "3.8"
resolve-path = "0.1"
memchr = "2.6"

[[bin]]
name = "orgize-lsp"
path = "src/main.rs"
