[package]
name = "orgize-sync"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
description = "Sync your Org with your favourite applications."
repository = "https://github.com/PoiScript/orgize"
readme = "README.md"
edition = "2018"
license = "MIT"
keywords = ["orgmode"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["dotenv", "google_calendar", "toggl"]
google_calendar = []
toggl = []

[dependencies]
app_dirs = "1.2.1"
chrono = { version = "0.4.9", features = ["serde"] }
colored = "1.8.0"
dotenv = { version = "0.14.1", optional = true }
futures-preview = "=0.3.0-alpha.19"
isahc = { version = "0.7.3", default-features = false, features = ["json", "http2", "static-curl"] }
orgize = { path = "../orgize", default-features = false, features = ["chrono"] }
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.40"
structopt = "0.3.1"
tokio = "=0.2.0-alpha.4"
toml = "0.5.3"
url = "2.1.0"
